Fixing feedback: 1. Text closer to line numbers 2. Spacing betwwen severity and commen on line & 3. smaller resolve conversation button

--- a/src/dotnet/APIView/ClientSPA/src/app/_components/code-panel/code-panel.component.scss
+++ b/src/dotnet/APIView/ClientSPA/src/app/_components/code-panel/code-panel.component.scss
@@ -216,7 +216,7 @@
         text-align: right;
         white-space: nowrap;
         padding-left: 5px;
-        padding-right: 5px;
+        padding-right: 0px;
         border-right: none;
         cursor: pointer;
         position: sticky;
